# SABER

./: CMakeLists.txt  Cargo.toml  README.md  pyproject.toml  requirements-orchestrator.txt  requirements-pyqt.txt  saber_orchestrator_gui.py  saber_orchestrator_pyqt.py  test_multi_bluetooth.py
bindings/: libpy_audio.cpp  libpy_mesh.rs
docs/: PAPER.md  STRUCTURE.md
libpy_mesh/: __init__.py  lib.rs
src/: CMakeCache.txt  CMakeLists.txt  lib.rs  setup.py
src/control/: dashboard.py  libpy_audio.pyd  libpy_mesh.whl  libpy_mesh_pybackup.py  test_runner.py  ui.py
src/core_audio/: audio_stream.cpp  audio_stream.hpp  buffer.hpp  sync_engine.cpp  sync_engine.hpp
src/include/: crypto.h  mesh.h  saber_protocol.h  sync.h
src/protocol/: crypto.cpp  crypto.rs  lib.rs  main.rs  mesh.cpp  mesh.rs  mod.rs  saber_protocol.cpp  sync.cpp  sync.rs
src/pybind/: pybind_module.cpp
tests/: test_audio.py  test_audio_driver.py  test_mesh.rs  test_sync.py
