[package]
name = "saber"
version = "0.1.0"
edition = "2021"
authors = ["Marco"]
description = "SABER - Synchronous Audio over Bluetooth with Extended Relay"

[lib]
name = "saber"
path = "src/lib.rs"
crate-type = ["cdylib"]



[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
bytes = "1.4.0"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.10.0"

# Dipendenze mancanti
btleplug = "0.11"
aes-gcm = "0.9.4"
ed25519-dalek = "1.0.1"
sha2 = "0.10"
x25519-dalek = "1.1.1"
hkdf = "0.12"
rand_core = "0.5.1"

[build-dependencies]
pyo3-build-config = "0.18.0"
