[tool.poetry]
name = "saber-ui"
version = "0.1.0"
description = "SABER - Synchronous Audio over Bluetooth with Extended Relay"
authors = ["Marco"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
PyQt5 = "^5.15.9"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"

[build-system]
requires = ["maturin>=0.14"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "libpy_mesh"
features = ["pyo3/extension-module"]
